# pass-rs

./: .gitignore  Cargo.toml
src/: main.rs
